--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "P2PPSR",
   "license": "Open BSV License",
   "dependencies": {
+    "@bsv/auth-express-middleware": "^1.0.12",
     "@bsv/payment-express-middleware": "^1.0.3",
-    "@bsv/sdk": "^1.3.35",
+    "@bsv/sdk": "^1.4.0",
     "@bsv/wallet-toolbox": "^1.1.58",
-    "auth-express-middleware": "^1.0.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.4.7",
     "express": "^4.18.2"
