--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "marscast",
   "version": "1.0.0",
   "description": "Mars Weather API Tutorial",
-  "type": "module",
   "main": "out/index.js",
   "scripts": {
-    "start": "tsc; node --max-http-header-size=65536 out/src/index.js",
+    "start": "tsc; node --max-http-header-size=65536 out/index.js",
     "build": "tsc",
     "lint": "standard --fix ."
   },
